同步近期更新，调整oracle和shell目录，增加系统化学习目录，推进全面学习计划